# JavaScript-Benchmarks

./: .gitignore  CMakeLists.txt  README.md  bench_engine.sh  compare_plots.py  log.md  run_all.sh  run_octane.c  run_octane.js  run_sunspider_like.c  trial.js
Results/Hermes/: kraken-1.1_results.csv  kraken-1.1_summary.txt  sunspider-1.0_results.csv  sunspider-1.0_summary.txt
Results/JerryScript/: sunspider-1.0_results.csv  sunspider-1.0_summary.txt
Results/NodeJS/: kraken-1.0_results.csv  kraken-1.0_summary.txt  sunspider-1.0_results.csv  sunspider-1.0_summary.txt
Results/NodeJS-NoJIT/: sunspider-1.0_results.csv  sunspider-1.0_summary.txt
Results/QuickJS/: kraken-1.0_results.csv  kraken-1.0_summary.txt  octane_results.csv  octane_results_20250814-153411.csv  octane_results_20250814-153416.csv  sunspider-1.0_results.csv  sunspider-1.0_summary.txt
Results/QuickJS/backup/: octane_results.csv.bak
Results/V8-JIT/: sunspider-1.0_results.csv  sunspider-1.0_summary.txt
Results/V8-NoJIT/: sunspider-1.0_results.csv  sunspider-1.0_summary.txt
benchmark_suites/ML/: LIST  ML_load.js
benchmark_suites/octane/: code-load.js  crypto.js  navier-stokes.js  octane_header.js  transform_benchmarks.sh
benchmark_suites/octane/standalone/: deltablue_standalone.js  regexp_standalone.js
benchmark_suites/standalone/: LIST  box2d_standalone.js  code-load_standalone.js  crypto_standalone.js  earley-boyer_standalone.js  gbemu_standalone.js  navier-stokes_standalone.js  pdfjs_standalone.js  raytrace_standalone.js  richards_standalone.js  splay_standalone.js  typescript_standalone.js  zlib_standalone.js
engines/: .gclient_entries  .gclient_previous_sync_commits
kraken-1.0/: tests_list.txt
tools/: make_octane_combined.sh
